moved endModal into gameBoard and fixed positioning, adjusted endModal fadeIn animation to stay transparent for first 50% of animation time to allow winLine animation to be visible

--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@ body,
 
 .endModal {
     position: absolute;
-    top: 11rem;
+    top: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -436,7 +436,7 @@ body,
         inset 0 0 2px 0 var(--white-1),
         inset 0 0 5px 0 var(--pink-1),
         inset 0 0 6px 0 var(--teal-1);
-    animation: fadeIn 3s 2s linear forwards;
+    animation: fadeIn 3s linear forwards;
 }
 
 .endModalText {
@@ -577,6 +577,10 @@ body,
 
 @keyframes fadeIn {
     0% {
+        opacity: 0;
+    }
+
+    50% {
         opacity: 0;
     }
 
